tests/negative/if_condition_bool.ax
module if_condition_bool;

export c fn main(argc: i32, argv: *mut *mut u8) -> i32 {
    if 1 {
        return 1;
    }
    return 0;
}
